name:               jude-web
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Jude Taylor
maintainer:         me@jude.bio
category:           Web
build-type:         Simple
extra-source-files: ChangeLog.md
cabal-version:      >=1.10

executable jude-web
  main-is:            Main.hs
  other-modules:      Database
                      Routes
                      Server
  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions: NoMonomorphismRestriction
  build-depends:      base, bytestring, cereal, cereal-text, containers,
                      digestive-functors, lens, mtl, persistent-template, text, time,
                      web-routes
  ghc-options:        -Wall -Werror

  if impl(ghcjs)
    other-modules: Frontend.Connection
                   Frontend.Main
                   Frontend.Router
    build-depends: ghcjs-dom-jsffi, ref-tf, reflex, reflex-dom, reflex-dom-contrib,
                   reflex-jsx, uri-bytestring
  else
    other-modules: Backend.Main
                   Backend.Render
                   Backend.StaticFiles
                   Backend.StaticFiles.Delegated
    build-depends: blaze-html, cryptonite, directory, file-embed, filepath, highlighter,
                   http-types, markdown, mime-types, monad-control, monad-logger,
                   pcre-light, persistent, persistent-postgresql, process-extras,
                   pwstore-fast, resource-pool, template-haskell, text, wai,
                   wai-app-static, wai-websockets, warp, websockets
