name:              webapp2
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple
license:           BSD3

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  src
    exposed-modules: Application
                     Foundation
                     Handler.Error
                     Handler.Home
                     Handler.Post.Edit
                     Handler.Post.New
                     Handler.Post.Read
                     Import
                     Model
                     Model.Instances
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Yesod.Text.Markdown

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2 -Werror

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base                  >= 4.6 && < 5
                 , aeson
                 , asn1-types
                 , attoparsec            >= 0.11.2.1
                 , blaze-builder
                 , blaze-html
                 , bytestring
                 , conduit
                 , data-default
                 , directory
                 , esqueleto
                 , fast-logger
                 , file-embed
                 , filepath
                 , highlighter
                 , hjsmin
                 , http-conduit
                 , http-types
                 , lens                  >= 4
                 , markdown
                 , MonadRandom
                 , monad-control
                 , monad-logger
                 , network               >= 2.6
                 , network-uri
                 , old-locale
                 , path-pieces
                 , pcre-light
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , process-extras
                 , shakespeare           >= 2
                 , system-filepath
                 , template-haskell
                 , text                  >= 1.1
                 , thyme
                 , wai                   >= 2.1
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod >= 1.2.5
                 , yesod-auth >= 1.2.7
                 , yesod-core >= 1.2.7
                 , yesod-form >= 1.3.6
                 , yesod-newsfeed
                 , yesod-pagination >= 1.1
                 , yesod-static >= 1.2.2.1

executable         webapp2
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , webapp2
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , webapp2
                 , yesod-test
                 , yesod-core
                 , yesod
                 , lifted-base
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , text
                 , transformers
                 , hspec
