name:              webapp2
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple
license:           BSD3

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  src, app
    exposed-modules: Application
                     DevelMain
                     Foundation
                     Handler.Common
                     Handler.Error
                     Handler.Home
                     Handler.Post.Edit
                     Handler.Post.New
                     Handler.Post.Read
                     Import
                     Model
                     Model.Instances
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Yesod.Text.Markdown
                     Yesod.Paginate

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 -Werror
    else
        ghc-options:   -Wall -O2 -Werror

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base
                 , MonadRandom
                 , aeson
                 , asn1-types
                 , attoparsec
                 , blaze-builder
                 , blaze-html
                 , bytestring
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , conduit-extra
                 , data-default
                 , directory
                 , esqueleto
                 , exceptions
                 , fast-logger
                 , file-embed
                 , filepath
                 , foreign-store
                 , highlighter
                 , hjsmin
                 , http-conduit
                 , http-types
                 , lens
                 , markdown
                 , monad-control
                 , monad-logger
                 , network
                 , network-uri
                 , old-locale
                 , path-pieces
                 , pcre-light
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , process-extras
                 , resourcet
                 , semigroups
                 , shakespeare
                 , system-fileio
                 , system-filepath
                 , template-haskell
                 , text
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-newsfeed
                 , yesod-static

executable         webapp2
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , webapp2
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall -Werror

    extensions: NoImplicitPrelude

    build-depends: base
                 , classy-prelude
                 , hspec
                 , lifted-base
                 , monad-logger
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , text
                 , transformers
                 , webapp2
                 , yesod
                 , yesod-core
                 , yesod-test
