name:              webapp2
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple
license:           BSD3

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  src, app
    exposed-modules: Application
                     Foundation
                     Handler.Common
                     Handler.Error
                     Handler.Home
                     Handler.Post.Edit
                     Handler.Post.New
                     Handler.Post.Read
                     Import
                     Model
                     Model.Instances
                     Settings
                     Settings.Development
                     Settings.StaticFiles
                     Yesod.Auth.Authy
                     Yesod.Paginate
                     Yesod.Text.Markdown

    if flag(dev) || flag(library-only)
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -O0 -Werror
    else
        ghc-options: -Wall -O2 -Werror

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base
                 , MonadRandom
                 , aeson
                 , asn1-types
                 , attoparsec
                 , blaze-builder
                 , blaze-html
                 , bifunctors
                 , bytestring
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , conduit-extra
                 , connection
                 , containers
                 , data-default
                 , directory
                 , esqueleto
                 , exceptions
                 , fast-logger
                 , file-embed
                 , filepath
                 , foreign-store
                 , ghc
                 , highlighter
                 , hjsmin
                 , http-client
                 , http-client-tls
                 , http-conduit
                 , http-types
                 , markdown
                 , monad-control
                 , monad-logger
                 , mtl
                 , network
                 , network-uri
                 , old-locale
                 , path-pieces
                 , pcre-light
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , process-extras
                 , resourcet
                 , semigroups
                 , shakespeare
                 , system-fileio
                 , system-filepath
                 , template-haskell
                 , text
                 , transformers
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-newsfeed
                 , yesod-static

executable webapp2
    if flag(library-only)
        Buildable: False

    main-is:        main.hs
    hs-source-dirs: app
    build-depends:  base
                  , webapp2
                  , yesod

    ghc-options:    -threaded -O2

test-suite spec
    type:           exitcode-stdio-1.0
    main-is:        main.hs
    hs-source-dirs: tests/spec, src
    ghc-options:    -Wall

    cpp-options: -DTESTING

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable

    build-depends: base
                 , MonadRandom
                 , aeson
                 , asn1-types
                 , attoparsec
                 , blaze-builder
                 , blaze-html
                 , bifunctors
                 , bytestring
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , conduit
                 , conduit-extra
                 , connection
                 , containers
                 , data-default
                 , directory
                 , esqueleto
                 , exceptions
                 , fast-logger
                 , file-embed
                 , filepath
                 , foreign-store
                 , ghc
                 , highlighter
                 , hjsmin
                 , hspec
                 , http-client
                 , http-client-tls
                 , http-conduit
                 , http-types
                 , markdown
                 , monad-control
                 , monad-logger
                 , mtl
                 , network
                 , network-uri
                 , old-locale
                 , path-pieces
                 , pcre-light
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , process-extras
                 , resourcet
                 , semigroups
                 , shakespeare
                 , system-fileio
                 , system-filepath
                 , template-haskell
                 , text
                 , transformers
                 , wai
                 , wai-extra
                 , wai-logger
                 , warp
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-newsfeed
                 , yesod-static
                 , yesod-test

test-suite hlint
    type:           exitcode-stdio-1.0
    main-is:        main.hs
    hs-source-dirs: tests/hlint
    ghc-options:    -Wall -Werror
    build-depends:  base, hlint
