name:                backend
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jude Taylor
maintainer:          me@jude.bio
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag production
  default: False
  manual: True
  description: Enable production build

executable backend
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends: base
               , blaze-html
               , bytestring
               , cereal
               , cereal-text
               , containers
               , cryptonite
               , digestive-functors
               , exceptions
               , file-embed
               , highlighter
               , lens
               , markdown
               , memory
               , mime-types
               , monad-logger
               , mtl
               , network
               , pcre-light
               , persistent
               , persistent-postgresql
               , persistent-template
               , process-extras
               , pwstore-fast
               , resource-pool
               , template-haskell
               , text
               , time
               , wai-app-static
               , wai-websockets
               , warp
               , websockets
               , unix
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-T

  if flag(production)
    ghc-options:       -Wall -Werror -O2 -rtsopts -with-rtsopts=-N
    cpp-options:       -DPRODUCTION
  else
    ghc-options:       -Wall -O0
