name:                frontend
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jude Taylor
maintainer:          me@jude.bio
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable frontend
  main-is:             FE.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , aeson
                     , blaze-html
                     , bytestring
                     , cereal
                     , cereal-text
                     , containers
                     , ghcjs-base
                     , ghcjs-dom
                     , ghcjs-prim
                     , highlighter
                     , lens
                     , markdown
                     , mtl
                     , parsec
                     , pcre-light
                     , persistent
                     , persistent-template
                     , reflex-dom
                     , text
                     , time
                     , unordered-containers
                     , uri-bytestring
                     , web-routes
  hs-source-dirs:      src
                     , backend-src
  default-language:    Haskell2010
  ghc-options:         -Wall
