name:                frontend
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jude Taylor
maintainer:          me@jude.bio
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable frontend
  main-is:             Frontend.hs
  build-depends:       base >=4.9 && <4.10
                     , bytestring
                     , cereal
                     , cereal-text
                     , containers
                     , digestive-functors
                     , ghcjs-base
                     , ghcjs-dom
                     , lens
                     , mtl
                     , parsec
                     , persistent-template
                     , reflex-dom
                     , text
                     , time
                     , uri-bytestring
                     , web-routes
  hs-source-dirs:      src
                     , backend-src
  default-language:    Haskell2010
  ghc-options:         -Wall
